2008-07-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: EXIT_READ_GROUP changed to EXIT_INVALID_GROUP.
	* src/groupmems.c: EXIT_INVALID_USERNAME changed to EXIT_INVALID_USER.

2008-07-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Really use booleans.
	* src/groupmems.c: Change isroot() to a macro that returns a
	boolean.

2008-07-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/defines.h: Make sure the booleans are defined before using
	them.

2008-07-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Added Prog global variable to indicate the name
	of the program in error messages.

2008-07-22  Lukáš Kuklínek  <lkukline@redhat.com>

	* NEWS, src/groupmems.c: Check if the user added to group actually
	exist. RedHat bug #455603
	* NEWS, src/groupmems.c: Check if the group exists in the group
	local database (/etc/group). RedHat bug #456088

2008-07-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Fix getrange prototype.

2008-07-21  Seraphim Mellos  <mellos@ceid.upatras.gr>

	* README, NEWS, configure.in, lib/pam_defs.h, src/login.c: Add
	support for OpenPAM.

2008-07-12  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: Ignore the return value of pam_end() before exiting.
	* src/chage.c: Ignore return values of strftime(), snprintf(),
	puts(), printf(), and fputs().
	* src/chage.c: Check the return value of asctime().

2008-07-12  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/gshadow.c: Avoid assignments in comparison.

2008-07-12  Nicolas François  <nicolas.francois@centraliens.net>

	* ChangeLog, NEWS, src/login.c: Re-inject the changes from 4.1.2.1.

2008-07-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Do not call usr_update() if it will have no
	effects. This avoid checking if the user exists in the local passwd